# kivis

./: .cargo.toml  .gitignore  .pre-commit-config.yaml  Cargo.toml  readme.md  scope_macro_test.rs
.cargo/: config.toml
fs-store/: Cargo.toml
fs-store/src/: lib.rs
fs-store/tests/: park_test.rs
kivis/: Cargo.toml
kivis-derive/: Cargo.toml
kivis-derive/src/: generator.rs  lib.rs  schema.rs
kivis-fs/: Cargo.toml
kivis-fs/src/: error.rs  lib.rs  repository.rs  serializer.rs
kivis-fs/tests/: park_test.rs
kivis/examples/: atomic_storage.rs  embedded.rs  file_storage.rs  transactions.rs  usage.rs
kivis/examples/remote_storage/: client.rs  main.rs  schema.rs  server.rs
kivis/src/: btreemap.rs  database.rs  errors.rs  lexicographic.rs  lib.rs  manifest.rs  table_heads.rs  traits.rs  transaction.rs  wrap.rs
kivis/src/impls/: mod.rs  unifier.rs
kivis/src/impls/unifier_data/: heapless.rs  mod.rs
kivis/src/integrations/: mod.rs  sled.rs
kivis/src/integrations/repository/: mod.rs  sled.rs
kivis/src/integrations/unifier/: bincode.rs  mod.rs
kivis/src/integrations/unifier_data/: alloc.rs  heapless.rs
kivis/src/intergrations/: mod.rs  sled.rs
kivis/src/traits/: atomic.rs  cache.rs  incrementable_types.rs  indexer.rs  macros.rs  mod.rs  repository.rs  schema.rs  serialization.rs  storage.rs  unifier.rs
kivis/src/transaction/: buffer.rs  converter.rs  errors.rs  iter.rs  mod.rs  pre_buffer.rs  serialized_buffer.rs  structure.rs
kivis/src/utils/: lexicographic.rs  memory.rs  mod.rs
kivis/tests/: atomic_storage.rs  atomic_transaction.rs  autoincrement.rs  basic.rs  common.rs  custom_serializer.rs  extended.rs  flight_indexes.rs  hash_key.rs  heapless.rs  index_remove.rs  indexes.rs  key_types.rs  layered_cache.rs  macro_test.rs  manifest_macro.rs  manual.rs  sled_integration.rs  table_heads.rs  trybuild.rs  tuple_struct.rs
kivis/tests/ui/: conflicting_key_strategies.rs  conflicting_key_strategies.stderr  duplicate_table_ids.rs  duplicate_table_ids.stderr  invalid_manifest_definition.rs  invalid_manifest_definition.stderr  no_std.rs  valid_multiple_tables.rs  valid_single_table.rs
