[workspace]
members = ["kivis", "kivis-derive", "kivis-fs"]
exclude = []
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"

[workspace.dependencies]
kivis = { path = "kivis" }
kivis-derive = { path = "kivis-derive", version = "0.3.0" }

serde = { version = "1.0.228", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
hex = "0.4.3"
paste = "1.0.15"
trybuild = "1.0"
anyhow = "1.0"
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
convert_case = "0.6"
csv = "1.3"
