[workspace]
members = ["kivis", "kivis-derive", "kivis-fs"]
exclude = []
resolver = "2"

[workspace.package]
version = "0.5.3"
edition = "2024"

[workspace.dependencies]
kivis = { path = "kivis", features = ["heapless"], version = "0.5.3" }
kivis-derive = { version = "0.5.2" }

serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0", features = ["serde"] }
hex = "0.4"
paste = "1.0"
trybuild = "1.0"
anyhow = "1.0"
thiserror = "2.0"
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
convert_case = "0.11"
csv = "1.4"
tempfile = "3.25"
proptest = "1.10"

# Dependencies for embedded example (no_std)
heapless = "0.9"
ekv = { version = "1.0", default-features = false }
postcard = { version = "1.0", default-features = false }
futures = { version = "0.3", default-features = false, features = ["executor"] }
embassy-sync = { version = "0.6", default-features = false }
