[package]
name = "kivis-derive"
version.workspace = true
edition = "2021"
description = "Procedural macros for kivis database schema generation"
license = "MIT"
repository = "https://github.com/matzayonc/kivis"
homepage = "https://github.com/matzayonc/kivis"
documentation = "https://docs.rs/kivis-derive"
keywords = ["database", "schema", "proc-macro", "derive"]
categories = ["database", "development-tools::procedural-macro-helpers"]
authors = ["Mateusz Zając <matzayonc@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0.219", features = ["derive"] }
convert_case = { version = "0.8.0" }
