[package]
name = "kivis-derive"
version.workspace = true
edition.workspace = true
description = "Procedural macros for kivis database schema generation"
license = "MIT"
repository = "https://github.com/matzayonc/kivis"
homepage = "https://github.com/matzayonc/kivis"
documentation = "https://docs.rs/kivis-derive"
keywords = ["database", "schema", "proc-macro", "derive"]
categories = ["database", "development-tools::procedural-macro-helpers"]
authors = ["Mateusz Zając <matzayonc@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
serde = { workspace = true }
convert_case = { workspace = true }
