[package]
name = "kivis"
version = "0.1.0"
edition = "2021"
description = "Type-safe database schema generation for Rust with support for custom storage backends, automatic indexing, and layered cache architectures"
license = "MIT"
repository = "https://github.com/matzayonc/kivis"
homepage = "https://github.com/matzayonc/kivis"
documentation = "https://docs.rs/kivis"
keywords = ["database", "schema", "key-value", "storage", "orm"]
categories = ["database", "data-structures"]
authors = ["Mateusz Zając <matzayonc@gmail.com>"]
readme = "../readme.md"

[dependencies]
kivis-derive = { version = "0.1.0", path = "../kivis-derive" }
serde = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
hex = "0.4.3"
trybuild = "1.0"
