[package]
name = "kivis"
version.workspace = true
edition = "2021"
description = "Type-safe database schema generation for Rust with support for custom storage backends, automatic indexing, and layered cache architectures"
license = "MIT"
repository = "https://github.com/matzayonc/kivis"
homepage = "https://github.com/matzayonc/kivis"
documentation = "https://docs.rs/kivis"
keywords = ["database", "schema", "key-value", "storage", "orm"]
categories = ["database", "data-structures"]
authors = ["Mateusz Zając <matzayonc@gmail.com>"]
readme = "../readme.md"

[features]
default = ["std", "atomic", "memory-storage"]
std = []
atomic = []
memory-storage = ["std"]

[dependencies]
kivis-derive = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
paste = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
trybuild = { workspace = true }
anyhow = { workspace = true }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
