[package]
name = "kivis"
version.workspace = true
edition.workspace = true
description = "Type-safe database schema generation for Rust with support for custom storage backends, automatic indexing, and layered cache architectures"
license = "MIT"
repository = "https://github.com/matzayonc/kivis"
homepage = "https://github.com/matzayonc/kivis"
documentation = "https://docs.rs/kivis"
keywords = ["database", "schema", "key-value", "storage", "orm"]
categories = ["database", "data-structures"]
authors = ["Mateusz Zając <matzayonc@gmail.com>"]
readme = "../readme.md"

[features]
default = ["std", "atomic", "memory-storage"]
std = []
alloc = []
atomic = []
memory-storage = ["std"]
heapless = ["dep:heapless"]

[dependencies]
kivis-derive = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
paste = { workspace = true }
heapless = { workspace = true, optional = true }

[dev-dependencies]
hex = { workspace = true }
trybuild = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Dependencies for embedded example (no_std)
ekv = { workspace = true }
postcard = { workspace = true }
futures = { workspace = true }
embassy-sync = { workspace = true }
ouroboros = "0.18"
heapless = { workspace = true }

[[example]]
name = "embedded"
required-features = ["heapless", "atomic"]
